# django_chess

./: pyproject.toml
chess/: db.sqlite3
chess/chess/: settings.py  urls.py
chess/duchess/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
chess/duchess/migrations/: 0001_initial.py  0002_game.py  0003_auto_20200625_0041.py  0004_auto_20200625_0047.py  0005_game_winner.py  0006_game_status.py
chess/duchess/static/css/: header.css
chess/duchess/static/img/: queen.psd
chess/duchess/templates/accounts/: login.html  register.html
chess/duchess/templates/play/: header.html  home.html  play.html
chess/example/: urls.py  views.py
