[tool.poetry]
name = "django_chess"
version = "0.1.0"
description = "Web application to play chess using django"
authors = ["OpiumCodes <aforikrulz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
django = "^3.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
